--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,8 @@
 
     * {
         user-select: none;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
     }
 
     html {
@@ -27,8 +29,12 @@
         margin: 0;
         padding: 0;
     }
-    /* Custom Scrollbar */
+
     ::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* ::-webkit-scrollbar {
         width: 12px;
     }
 
@@ -40,7 +46,7 @@
 
     ::-webkit-scrollbar-thumb:hover {
         background-color: #555;
-    }
+    } */
 }
 
 @font-face {
@@ -72,14 +78,12 @@
     }
 }
 
-/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-/* Firefox */
 input[type="number"] {
     -moz-appearance: textfield;
 }
