--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@
         --radius: 0.5rem;
     }
 
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
     * {
         scroll-behavior: smooth;
     }
@@ -20,7 +24,6 @@
     html,
     body {
         font-family: "Outfit";
-        /* background-color: #f3f4f6; */
         color: rgb(var(--color-secondary));
         margin: 0;
         padding: 0;
