--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.cdnfonts.com/css/lufga");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -23,19 +24,19 @@
 
     html,
     body {
-        font-family: "Outfit";
+        font-family: "Outfit", sans-serif;
         color: rgb(var(--color-secondary));
         margin: 0;
         padding: 0;
     }
 
-    input[type="email"]::placeholder {
+    .authForm input[type="email"]::placeholder {
         color: white;
     }
-    input[type="text"]::placeholder {
+    .authForm input[type="text"]::placeholder {
         color: white;
     }
-    input[type="password"]::placeholder {
+    .authForm input[type="password"]::placeholder {
         color: white;
     }
 }
